Fixed the error of total tip and total bill with tip not showing up

--- a/style.css
+++ b/style.css
@@ -24,3 +24,11 @@ background-color: #ffff;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 500;
 }
+.Footer {
+    font-size: 20px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.socials {
+    font-size: 20px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
